chap1/4-3_network/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ing
spec:
  rules:
  - host: test.k8spocket.io
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-svc
          servicePort: 80
